--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
+
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
+
+info.app.name= Procedimientos almacenados
+info.app.description= Microservicio aplicando procedimientos almacenados.
+info.app.version=1.0.1
