--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=procedimientos-almacenados
 
-#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/proceduresDB
-spring.datasource.url=jdbc:mysql://localhost:3306/proceduresDB
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/proceduresDB
+#spring.datasource.url=jdbc:mysql://localhost:3306/proceduresDB
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
